test/spec_vectors/return_call/fail/module_12.wat
(module (func $unbound-func (return_call 1)))